--- a/package.json
+++ b/package.json
@@ -26,13 +26,18 @@
     "url": "https://github.com/walletconnect-labs/walletconnect-v2-test-wallet/issues"
   },
   "dependencies": {
+    "@pedrouid/iso-crypto": "^1.0.0",
     "@pedrouid/iso-store": "^1.0.5",
     "@walletconnect/client": "^2.0.0-alpha.2",
+    "@walletconnect/types": "^2.0.0-alpha.2",
     "@walletconnect/utils": "^2.0.0-alpha.2",
     "axios": "^0.20.0",
-    "bignumber.js": "^9.0.1",
+    "bcrypto": "^5.3.0",
+    "bip32": "^2.0.6",
+    "bip39": "^3.0.3",
     "blockies-ts": "^1.0.0",
-    "bn.js": "^5.1.3",
+    "caip": "^0.9.2",
+    "enc-utils": "^3.0.0",
     "eth-sig-util": "^2.5.3",
     "ethers": "^5.0.17",
     "prop-types": "^15.7.2",
@@ -40,6 +45,9 @@
     "react-dom": "^16.12.0",
     "react-qr-reader": "^2.2.1",
     "react-scripts-ts": "^4.0.8",
+    "rpc-json-auth": "^0.2.1",
+    "rpc-json-signer": "^1.0.0",
+    "rpc-json-utils": "^1.1.4",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
