--- a/package.json
+++ b/package.json
@@ -26,20 +26,16 @@
     "url": "https://github.com/walletconnect-labs/walletconnect-v2-test-wallet/issues"
   },
   "dependencies": {
-    "@pedrouid/iso-crypto": "^1.0.0",
     "@pedrouid/iso-store": "^1.0.5",
     "@walletconnect/client": "^2.0.0-alpha.2",
     "@walletconnect/types": "^2.0.0-alpha.2",
     "@walletconnect/utils": "^2.0.0-alpha.2",
     "axios": "^0.20.0",
-    "bcrypto": "^5.3.0",
-    "bip32": "^2.0.6",
-    "bip39": "^3.0.3",
     "blockies-ts": "^1.0.0",
     "caip": "^0.9.2",
-    "enc-utils": "^3.0.0",
     "eth-sig-util": "^2.5.3",
     "ethers": "^5.0.17",
+    "mnemonic-keyring": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
