--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
 
 # testing
 /coverage
@@ -14,7 +16,6 @@
 .env.local
 .env.development.local
 .env.test.local
-.env.production
 .env.production.local
 
 npm-debug.log*
